Styles - Fix horizontal scroll on About page (#95)

--- a/src/app.css
+++ b/src/app.css
@@ -58,12 +58,7 @@
 }
 
 html {
-  scrollbar-color: #686868 #424242;
   color-scheme: dark;
-}
-
-body {
-  scrollbar-color: #686868 #424242;
 }
 
 :root {
